--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Age calculator app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Age calculator app</title>
 </head>
-<body>
 
+<body>
+  <div class="inputs">
+    <label for="day">DAY</label>
+    <input type="text" id="day">
+
+    <label for="month">MONTH</label>
+    <input type="text" id="month">
+
+    <label for="year">YEAR</label>
+    <input type="text" id="year">
+
+  </div>
   Day
   DD
 
@@ -24,14 +27,16 @@
 
   Year
   YYYY
-
+  <div class="date__display">
+    <p><strong>--</strong>years</p>
+    <p><strong>--</strong>months</p>
+    <p><strong>--</strong>days</p>
+  </div>
   -- years
   -- months
   -- days
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+
+
 </body>
+
 </html>
